--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,6 +46,16 @@ footer{
 .row.center{
   justify-content: center;
 }
+.row.top{
+  align-items: flex-start;
+}
+
+.col-1{
+  flex:1 1 25rem;
+}
+.col-2{
+  flex:2 1 50rem;
+}
 
 /* Common */
 h1{
@@ -61,6 +71,35 @@ a{
 }
 a:hover{
   color: orange;
+}
+ul{
+  padding:0;
+  margin: 0;
+  list-style-type: none;
+}
+li{
+  margin-top: 1rem;
+}
+button{
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border-radius: 0.1rem #a4a4a4 solid;
+  font-size: 1.6rem;
+  font-family: Helvetica,Arial,sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #f8f8f8;
+  cursor: pointer;
+}
+button:hover{
+  border:0.3rem #404040 solid;
+}
+button.primary{
+  background-color: #f0c040;
+}
+button.block{
+  width: 100%;
+
 }
 /* Header */
 header a{
@@ -81,19 +120,22 @@ img.medium{
   max-width: 29rem;
   width: 100%;
 }
+img.large{
+  width: 100%;
+}
 
 /* Card */
-.card{
-  border: 0.1 #c0c0c0;
+.card {
+  border: 0.1rem #c0c0c0 solid;
   background-color: #f8f8f8;
   border-radius: 0.5rem;
   margin: 1rem;
 }
-.card-body{
+.card-body {
   padding: 1rem;
 }
-.card-body > *{
-  margin: bottom 0.5rem;  ;
+.card-body > * {
+  margin-bottom: 0.5rem;
 }
 .price{
   font-size: 2rem;
@@ -101,4 +143,15 @@ img.medium{
 /* Rating */
 .rating span{
   color: #f0c040;
+}
+.rating span:last-child{
+  color: #404040;
+}
+
+/* Alert */
+.success{
+  color: #20a020;
+}
+.error{
+  color:#a02020;
 }
